Fix input label font and spacing

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ button {
 main,
 input {
   font-family: "action";
-  font-size: clamp(0.8rem, 1vw, 1.2rem);
+  font-size: clamp(0.8rem, 1vw, 1.1rem);
 }
 .main-container h1 {
   font-size: clamp(0.8rem, 2vw, 4rem);
@@ -158,7 +158,7 @@ input:focus {
   outline-color: var(--color-spring-bud);
 }
 input:focus + label {
-  top: -20px;
+  top: -18px;
   opacity: 1;
   color: var(--color-alice-blue);
 }
